    get smoother segments without removing anatomical details. 
(2) Maximum-based bias correction and intensity scaling for global and local
    segmentation.
(3) Less aggressive local adaption with a stronger relation to SPM classes.
(4) Correct an SPM label error, where intracranial BG was labeled as CSF that
    produce CSF mean intensities that were to close to the BG intensity and
    CSF was detected as low GM. Correct also the other "direction" where CGM
(5) The partitioning routine allows now a direct mapping of the basal ganglia
    for maximum-based bias correction and local adaptive segmentation.   
(6) New skull-stripping routine in the LAS pipeline (alpha status) with a harder
    brain extraction to reduce meninges and blood vessels that needs to be a 
    little bit smoother:
    
               DICE     FP    FN
      VBM12i:  0.9632   4437  83478
      VBM12:   0.9720  21337  46823
      
(7) Deactivated BVC for inverse contrast.
(8) Command window output updates:
    - Added colored output for the filename output.
    - Added computation times for preprocessing steps.
    - Added final output with total computation time and with short QA results.
    - Final reduction of Dartel command window output.
------------------------------------------------------------------------
r487 | dahnke | 2013-05-15 11:20:35

M       CHANGES.txt
M       cg_vbm_defaults.m
M       cg_vbm_write.m
M       vbm12.txt
 M      vbm_io_colormaps.m
M       vbm_io_cprintf.m
MM      vbm_stat_marks.m
M       vbm_vol_partvol.m

(1) Corrected resolution error in LAS skull-stripping.
(2) Rewrote parts of the partitioning.
(3) Corrected figure error, if spm_grafics was not the current figure.
(4) Prepare preprocessing for thickness phantom and test thickness measure.
(5) Update partitioning and add error messages for missing structures.


------------------------------------------------------------------------
r488 | dahnke | 2013-05-19 16:11:46